create submit for btn about

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="author" content="Oleg Troian" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/icons.css">
+    <link rel="stylesheet" href="./css/icon.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Halloween</title>
   </head>
   <body>
@@ -99,12 +100,16 @@
       </div>
     </section>
     <footer></footer>
+
     <!-- MODAL-ABOUT -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <span class="close">&times;</span>
+        <button type="button" class="modal-button" data-modal-close>
+          <i class="icon-close"></i>
+        </button>
       </div>
     </div>
+
     <script src="./js/script.js" defer></script>
   </body>
 </html>
