update hero css

--- a/index.html
+++ b/index.html
@@ -111,5 +111,6 @@
     </div>
 
     <script src="./js/script.js" defer></script>
+    <script src="./js/modal.js" defer></script>
   </body>
 </html>
