create img object

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Oleg Troian" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/icon.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/icon.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Halloween</title>
   </head>
   <body>
@@ -56,7 +56,7 @@
       </div>
     </section>
 
-      <!-- ABOUT -->
+    <!-- ABOUT -->
     <section class="about-section">
       <div class="about-container container">
         <div class="content-box">
@@ -67,14 +67,19 @@
             inventore dolore amet harum alias accusantium numquam rem explicabo
             ipsam dolorum mollitia veritatis. Eos!
           </p>
-          <button type="button" class="about-btn" data-modal-open>read more</button>
+          <button type="button" class="about-btn" data-modal-open>
+            read more
+          </button>
         </div>
       </div>
     </section>
 
     <!-- GALLERY -->
     <section class="gallery-sectio">
-      <div class="gallery-container container"></div>
+      <div class="gallery-container container">
+        <h2 class="gall-title">Gallery</h2>
+        <div class="gallery-wrapper"></div>
+      </div>
     </section>
 
     <section class="form-section">
@@ -112,5 +117,6 @@
 
     <script src="./js/script.js" defer></script>
     <script src="./js/modal.js" defer></script>
+    <script src="./js/img-modal.js" defer></script>
   </body>
 </html>
