new img-hero size

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
         <ul class="nav-list">
           <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="#gallery" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+          <li class="nav-item">
+            <a href="#gallery" class="nav-link">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -174,5 +178,6 @@
     <script src="./js/modal-img.js" defer></script>
     <script src="./js/form-valid.js" defer></script>
     <script src="./js/burger-menu.js" defer></script>
+    <script src="./js/hero-array.js" defer></script>
   </body>
 </html>
