--- a/index.html
+++ b/index.html
@@ -175,12 +175,11 @@
 
     <div class="backdrop-1 is-hidden" id="modal-window">
       <!-- is-hidden -->
- 
-      <div class="form-box">
 
+      <div class="form-box">
         <form class="form-modal" id="sign-up">
           <button type="button" class="btn-regst" id="modal-close">
-            <i class="icon-close registretion"></i> 
+            <i class="icon-close registretion"></i>
           </button>
           <input
             type="text"
@@ -218,42 +217,47 @@
           <div class="pass">
             <label>
               <span class="pass-help">minimum 3 karakterer</span>
-              
+
               <input
-              type="password"
-              name="password"
-              autocomplete="off"
-              required
-              minlength="3"
-              maxlength="20"
-              placeholder="Password"
-              class="pass-input"
+                type="password"
+                name="password"
+                autocomplete="off"
+                required
+                minlength="3"
+                maxlength="20"
+                placeholder="Password"
+                class="pass-input"
               />
             </label>
             <label>
               <input
-              type="password"
-              name="passwordRepeat"
-              autocomplete="off"
-              placeholder="Gentag Adgangskode"
-              class="pass-input"
+                type="password"
+                name="passwordRepeat"
+                autocomplete="off"
+                placeholder="Gentag Adgangskode"
+                class="pass-input"
               />
             </label>
           </div>
-          
+
           <input
-          type="submit"
-          name="submit"
-          value="Opret Bruger"
-          id="submit-form"
+            type="submit"
+            name="submit"
+            value="Opret Bruger"
+            id="submit-form"
           />
           <!-- <div class="msgg-form"></div> -->
         </form>
       </div>
-
     </div>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer-content">
+        <p class="footer-text">
+          Produced By Oleg <span class="symbols">🤩</span>
+        </p>
+      </div>
+    </footer>
 
     <script src="./js/about-modal.js" defer></script>
     <script src="./js/gallery.js" defer></script>
